style.css
/* ... */
/* line 24, sass/layout/_footer.scss */
.site-footer .footer-wrapper {
    display: block;
}
@media screen and (min-width: 1025px) {
    /* line 24, sass/layout/_footer.scss */
    .site-footer .footer-wrapper {
        display: grid;
        grid-template-columns: repeat(4, 1fr);
    }
}
@media screen and (min-width: 768px) {
    /* line 33, sass/layout/_footer.scss */
    .site-footer .footer-contact-wrapper {
        display: grid;
        grid-template-columns: repeat(3, 1fr);
        grid-column: span 3;
    }
}
/* line 43, sass/layout/_footer.scss */
.site-footer .footer-socials-widgetarea {
    display: flex;
    margin-top: 28px;
    align-items: center;
}
@media screen and (min-width: 1025px) {
    /* line 43, sass/layout/_footer.scss */
    .site-footer .footer-socials-widgetarea {
        margin-top: 0;
    }
}
/* line 51, sass/layout/_footer.scss */
.site-footer .footer-info-widgetarea {
    margin-top: 28px;
}
/* line 57, sass/layout/_footer.scss */
.site-footer a {
    color: white;
    text-decoration: none;
}
/* line 62, sass/layout/_footer.scss */
.site-footer ul.mks_social_widget_ul {
    margin: 0;
    padding-left: 0;
}
/* line 66, sass/layout/_footer.scss */
.site-footer ul.mks_social_widget_ul a {
    background-color: white;
}
/* line 70, sass/layout/_footer.scss */
.site-footer ul.mks_social_widget_ul a:before {
    color: var(--miles_primary_dark);
}
/* line 1, sass/layout/_header.scss */
.site-header {
    /* position: relative; */
    /* transition: top 0.3s ease-in-out 0s, visibility 0s linear 0.3s, left 0s; */
    background-color: var(--miles_primary_dark);
    color: white;
    height: var(--header-height);
    position: sticky;
    top: 0;
}

.site-header .site-header-container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 14px;
}

.site-header .site-header-container a:hover,
.site-header .site-header-container a:active,
.site-header .site-header-container a:focus {
    background-color: transparent !important;
}

@media (min-width: 768px) {
    /* line 11, sass/layout/_header.scss */
    .site-header .site-header-container {
        width: var(--page-wrap);
        margin: auto;
        padding: 0;
    }
}
/* line 22, sass/layout/_header.scss */
.site-header .site-branding {
    padding-top: 1rem;
    padding-bottom: 1rem;
}
/* line 30, sass/layout/_header.scss */
.site-header .site-description,
.site-header .site-title {
    display: none;
}

.site-header .site-branding a[rel='home'] {
    display: flex;
    position: absolute;
    z-index: 50;
}

@media screen and (max-width: 900px) and (orientation: landscape) {
    .site-header .site-branding a[rel='home'] {
        position: absolute;
    }
}

.open-menu .fixed {
    mix-blend-mode: normal;
}
/* line 49, sass/layout/_header.scss */
.open-menu .fixed .miles-logo .st0 {
    fill: white;
}
#wpadminbar {
    position: fixed !important;
}

/* line 66, sass/layout/_header.scss */
.fixed .cities-navigation {
    display: none;
}

/* line 74, sass/layout/_header.scss */
.miles-logo .st0 {
    fill: #fff;
}

/* line 79, sass/layout/_header.scss */
.fixed .miles-logo .st0 {
    fill: var(--miles_primary_dark) !important;
}
@media all and (-webkit-min-device-pixel-ratio: 0) and (min-resolution: 0.001dpcm) {
    /* line 79, sass/layout/_header.scss */
    .fixed .miles-logo .st0 {
        fill: var(--miles_primary_dark);
    }
}

/* line 1, sass/layout/_grid.scss */
.site-main {
    position: relative;
    top: 6rem;
    margin-bottom: 6rem;
}

.home .site-main {
    top: 0;
}

/* line 5, sass/layout/_grid.scss */
body {
    overflow-x: hidden;
}
/* line 8, sass/layout/_grid.scss */
body.open-menu {
    overflow-y: hidden;
}

/*--------------------------------------------------------------
## block widths
--------------------------------------------------------------*/
/* line 20, sass/layout/_grid.scss */
.search-container,
.error-404,
.entry-content {
    max-width: 100vw;
}
@media (min-width: 768px) {
    .search-container,
    .error-404,
    .entry-content {
        margin: 0 auto;
        width: var(--page-wrap);
    }
}

/* line 33, sass/layout/_grid.scss */
.custom-block-large-banner {
    margin-right: calc(50% - 50vw);
    margin-left: calc(50% - 50vw);
    max-width: 100vw;
    width: 100vw;
}

@media (min-width: 768px) {
    /* line 40, sass/layout/_grid.scss */
    .alignfull,
    .custom-block-feature-block {
        margin-right: calc(50% - 50vw);
        margin-left: calc(50% - 50vw);
        max-width: 100vw;
        width: 100vw;
    }
}

@media (min-width: 768px) {
    /* line 50, sass/layout/_grid.scss */
    .alignwide {
        margin-left: calc(25% - 25vw);
        margin-right: calc(25% - 25vw);
    }
}

@media (min-width: 768px) {
    /* line 59, sass/layout/_grid.scss */
    *[class*='__inner-container'] {
        max-width: calc((var(--content_width) / 3) * 2);
        margin-right: auto;
        margin-left: auto;
    }
}

/*--------------------------------------------------------------
## block vertical margins & paddings
--------------------------------------------------------------*/
/* line 77, sass/layout/_grid.scss */
*[class*=' wp-block'] > *[class*=' wp-block'],
*[class^='wp-block'] > *[class^='wp-block'] {
    margin-top: 0;
    margin-bottom: 0;
}

/* line 85, sass/layout/_grid.scss */
*[class*='wp-block-column'] > *[class*=' wp-block-column'],
*[class^='wp-block-column'] > *[class^='wp-block-column'] {
    margin-top: 0;
    margin-bottom: 0;
}

/* line 95, sass/layout/_grid.scss */
.has-background *[class*='__inner-container'],
.has-background-dim *[class*='__inner-container'] {
    padding-top: 28px;
    padding-bottom: 28px;
}
@media (min-width: 768px) {
    /* line 95, sass/layout/_grid.scss */
    .has-background *[class*='__inner-container'],
    .has-background-dim *[class*='__inner-container'] {
        padding-top: 56px;
        padding-bottom: 56px;
    }
}
/* ... */

